# kirlent_sphinx

./: .gitignore  .python-version  HISTORY.rst  LICENSE.txt  LICENSE_cloud_sptheme.txt  README.rst  pyproject.toml  setup.cfg  update_themes.sh
kirlent_sphinx/: __init__.py  __init__.pyi  directives.py  directives.pyi  slides.py  slides.pyi  tables.py  tables.pyi
kirlent_sphinx/templates/kirlent/: kirlent-tailwind.css  layout.html  tailwind.js  theme.conf
kirlent_sphinx/templates/kirlent/static/css/: kirlent.css  reveal.css  reveal.scss  white.css
kirlent_sphinx/templates/kirlent/static/css/theme/: beige.css  black.css  blood.css  league.css  moon.css  night.css  serif.css  simple.css  sky.css  solarized.css  white.css
kirlent_sphinx/templates/kirlent/static/css/theme/source/: black.scss  serif.scss  sky.scss  white.scss
kirlent_sphinx/templates/kirlent/static/css/theme/template/: settings.scss  theme.scss
kirlent_sphinx/templates/kirlent_impressjs/: layout.html  theme.conf
kirlent_sphinx/templates/kirlent_impressjs/static/css/: classic-slides.css  kirlent.css_t
kirlent_sphinx/templates/kirlent_revealjs/: layout.html  theme.conf
kirlent_sphinx/templates/kirlent_revealjs/static/css/: kirlent.css_t  reveal.css  white.scss
kirlent_sphinx/templates/kirlent_revealjs/static/css/template/: settings.scss
kirlent_sphinx/templates/styles/: base.css  impressjs.css  mkcss.sh  revealjs.css
misc/: PrintRevealNotes.js  decktape.txt
tests/: test_sphinx.py
