[tool.poetry]
name = "kirlent_sphinx"
version = "0.1.1"
description = "Sphinx extension for slides and extended tables."
readme = "README.rst"

authors = ["H. Turgut Uyar <uyar@tekir.org>"]
license = "BSD-3-Clause"

homepage = "https://gitlab.com/tekir/kirlent_sphinx"
documentation = "https://gitlab.com/tekir/kirlent_sphinx"
repository = "https://gitlab.com/tekir/kirlent_sphinx"

keywords = ["sphinx", "table", "slide", "presentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Text Processing :: Markup :: HTML"
]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^1.8"

[tool.poetry.dev-dependencies]
pygenstub = "^1.2"
flake8 = "^3.7"
flake8-isort = "^2.6"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = style
skipsdist = True

[testenv:style]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run {posargs:flake8} kirlent_sphinx
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
